[package]
name = "nlopt"
version = "0.5.2"
authors = ["Lucas L. Treffenstädt <lucas@treffenstaedt.de>", "Alex Whitney <adwhit@fastmail.com>"]
description = "Wrapper for the nlopt library"
license = "MIT"
repository = "http://github.com/adwhit/rust-nlopt"
readme = "README.md"
keywords = ["nonlinear", "optimization"]
categories = ["science", "algorithms"]
edition = "2018"

[build-dependencies]
cmake = "0.1.44"

[dev-dependencies]
approx = "0.4"