[package]
name = "nlopt"
version = "0.7.0"
authors = ["Lucas L. Treffenstädt <lucas@treffenstaedt.de>", "Alex Whitney <adwhit@fastmail.com>"]
description = "Wrapper for the nlopt library"
license = "MIT"
repository = "https://github.com/adwhit/rust-nlopt"
readme = "README.md"
keywords = ["nonlinear", "optimization", "lbfgs", "bobyqa", "milp"]
categories = ["science", "algorithms"]
edition = "2018"

[build-dependencies]
cmake = "0.1.44"

[dev-dependencies]
approx = "0.4"
